--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <section id="gallery">
         <h2>User Submitted Gallery</h2>
         <div>
-          <img src="/fotosgatinhos/gato1.jpg" alt="Kitten 1" width="300" height="200">
-          <img src="/fotosgatinhos/gato2.jpg" alt="Kitten 2" width="300" height="200">
-          <img src="/fotosgatinhos/gato3.jpg" alt="Kitten 3" width="200" height="200">
+          <img src="/fotosgatinhos/gato1.jpg" alt="Gatinho 1" width="300" height="200">
+          <img src="/fotosgatinhos/gato2.jpg" alt="Gatinho 2" width="300" height="200">
+          <img src="/fotosgatinhos/gato3.jpg" alt="Gatinho 3" width="200" height="200">
         </div>
       </section>
 
